fixed switchboard popup visibility (overflow situation)

--- a/vlo-web-app/src/main/less/inc/assets/switchboard-popup/switchboardpopup.css
+++ b/vlo-web-app/src/main/less/inc/assets/switchboard-popup/switchboardpopup.css
@@ -17,6 +17,7 @@ button.switchboardpopup-dropdown-toggle img{
 
 ul.switchboardpopup-dropdown-menu {
     padding: 0px;
+    position: relative;
 }
 @media (min-width: 768px) {
     ul.switchboardpopup-dropdown-menu {
